[tool.poetry]
name = "mneme-server"
version = "0.1.0"
description = "Self hosted journal keeping app"
authors = ["Danya Rose <Danya.Scout@gmail.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.2"
flask_sqlalchemy = "^2.4.3"
pyJWT = "^1.7.1"
fastapi = "^0.55.1"
uvicorn = "^0.11.5"
sqlalchemy = "^1.3.17"
passlib = "^1.7.2"
bcrypt = "^3.1.7"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.3"
pylint = "^2.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
