[tool.poetry]
name = "mneme-server"
version = "0.1.0"
description = "Self hosted journal keeping app"
authors = ["Danya Rose <Danya.Scout@gmail.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
flask_sqlalchemy = "^2.4.3"
pyJWT = "^1.7.1"
fastapi = "^0.55.1"
uvicorn = "^0.11.5"
sqlalchemy = "^1.3.17"
passlib = "^1.7.2"
bcrypt = "^3.1.7"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.3"
pylint = "^2.5.2"
pytest = "^5.4"
requests = "^2.23"

[tool.pylint.master]
ignore = ["tests"]
# Disable missing doc-strings,
# Unnecessary "else" after "raise/return",
disable = ["C0114", "C0115", "C0116", "R1705", "R1720", "W0511", "R0401"]

[tool.pylint.basic]
good-names = ["r", "db", "kw"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
min-public-methods = 0

[tool.pylint.reports]
reports = "no"
score = "no"
output-format = "colorized"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
