[tool.poetry]
name = "mneme-server"
version = "0.1.0"
description = "mneme API The self hosted journal keeping app."
authors = ["Spyros Roum <spyrosr1@gmail.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.7"
pyJWT = "^1.7.1"
fastapi = "^0.55.1"
uvicorn = "^0.11.5"
passlib = "^1.7.2"
bcrypt = "^3.1.7"
python-multipart = "^0.0.5"
tortoise-orm = "^0.16.13"
aiosqlite = "^0.14.0"

[tool.poetry.dev-dependencies]
asynctest = "^0.13"
autopep8 = "^1.5.3"
pylint = "^2.5.2"
pytest = "^5.4"
requests = "^2.23"

[tool.pylint.master]
ignore = ["tests"]
# Disable missing doc-strings,
# Unnecessary "else" after "raise/return",
disable = ["C0114", "C0115", "C0116", "R1705", "R1720", "W0511", "R0401", "R0902"]
load-plugins = ["tortoise.contrib.pylint"]

[tool.pylint.basic]
good-names = ["r", "db", "kw", "i", "e", "c"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
min-public-methods = 0
max-args = 8

[tool.pylint.reports]
reports = "no"
score = "no"
output-format = "colorized"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
